Implement another test to show use of threads